Make problem section more mobile friendly and fix double borders

--- a/app/components/accordion/Accordion.module.css
+++ b/app/components/accordion/Accordion.module.css
@@ -7,9 +7,6 @@
 
 .item + .item {
   border-top: 1px solid var(--tblr-border-color);
-  &:last-of-type {
-    border-bottom: 1px solid var(--tblr-border-color);
-  }
 }
 
 .header {
